force-app/main/default/objects/RD_Seals_Component_Materials__c/RD_Seals_Component_Materials__c.object-meta.xml
<CustomObject>
    <label>RD Seals Component Materials</label>
    <nameField>
        <label>RD Seals Component Materials</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Seals Component Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>