force-app/main/default/objects/RD_Seals_Component_Materials__c/fields/Add_Metal_Seal__c.field-meta.xml
<CustomField>
    <fullName>Add_Metal_Seal__c</fullName>
    <label>Add Metal Seal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>