force-app/main/default/objects/RD_Seals_Component_Materials__c/fields/Atex__c.field-meta.xml
<CustomField>
    <fullName>Atex__c</fullName>
    <label>Atex</label>
    <length>20</length>
    <type>Text</type>
</CustomField>