force-app/main/default/objects/RD_Seals_Component_Materials__c/fields/Non_Fragmenting__c.field-meta.xml
<CustomField>
    <fullName>Non_Fragmenting__c</fullName>
    <label>Non-Fragmenting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>