force-app/main/default/objects/RD_Seals_Component_Materials__c/fields/SealUpperTemp__c.field-meta.xml
<CustomField>
    <fullName>SealUpperTemp__c</fullName>
    <label>SealUpperTemp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>