force-app/main/default/objects/RD_Seals_Component_Materials__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTC__c</columns>
    <columns>STC__c</columns>
    <columns>SZC__c</columns>
    <columns>Atex__c</columns>
    <columns>MatlCode__c</columns>
    <columns>NACE__c</columns>
    <columns>Non_Fragmenting__c</columns>
    <columns>PressLL__c</columns>
    <columns>PressUL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>